# jarvis

./: Cargo.toml  LICENSE  README.md  index.html
src/: lib.rs  main.rs
src/data/: job.rs  job_kind.rs  matters.rs  message.rs  mission.rs  mod.rs  porter.rs  resource.rs
src/labor/: inner_labor.rs  mod.rs  schedule_labor.rs  storage_labor.rs
src/porter/: RocketPorter.rs  mod.rs
src/server/: mod.rs  schedule.rs
src/ui/: jarvis_ui.rs  matters_ui.rs  message_ui.rs  mod.rs  resource_ui.rs  schedule.rs  schedule_ui.rs
