[package]
name = "jarvis"
version = "0.1.0"
edition = "2021"
authors = ["Dead Poet Spoon <deadpoetspoon@qq.com>"]

[package.metadate.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
uuid = {version="1.11.0",features=["v4","js","serde"]}
chrono = {version="0.4.38",features=["serde"]}
serde = {version = "1.0", features=["derive"]}
log = "0.4.22"
ron = "0.10.1"
anyhow = "1.0.93"
ehttp = {version = "0.5.0"}
poll-promise = {version="0.3.0"}
egui = {version="0.31.1"}
eframe = {  version = "0.31.1",  default-features = false,  features = ["glow","persistence"]}
egui_extras = { version = "0.31.1", features = ["chrono", "datepicker", "serde"] }
thiserror = "2.0.12"


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.47"
web-sys = "0.3.74"

[profile.release]
opt-level = 2 

[profile.dev.package."*"]
opt-level = 2

